--- a/current-time-and-random-color/index.html
+++ b/current-time-and-random-color/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown</title>
+    <title>Present</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div id="heading">
         <h1 class="heading1">Hello!</h1>
-        <h1 class="heading1">I Am </h1>
-        <h1 class="heading1">Current Time</h1>
+        <h1 class="heading1">I Am Your</h1>
+        <h1 class="heading1">Present Time</h1>
     </div>
 <div id="container">
     <div id="main">
